refactor: fix code and rename src

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <main class="content">
                 <div class="layout-2-column">
                     <div class="left">
-                        <img src="/image/myfoto.png" class="myfoto" alt="myfoto">
+                        <img src="/myfoto.png" class="myfoto" alt="myfoto">
                         <div class="contacts">
                             <h2>PERSONAL DETAILS</h2>
                             <ul class="contacts__link">
@@ -77,10 +77,14 @@
             <footer class="footer">
                 <div class="footer__icon">
                     <div>
-                        <a href="https://github.com/Dimas-worker"><img src="/image/Github.png" class="icon-github" alt="github-icon" width="51px" height="51px"></span></a>
+                        <a href="https://github.com/Dimas-worker">
+                            <img src="/Github.png" class="icon-github" alt="github-icon">
+                        </a>
                     </div>
                     <div>
-                        <a href="https://rs.school/js/"><span class="icon-rss"></span></a>
+                        <a href="https://rs.school/js/">
+                            <span class="icon-rss"></span>
+                        </a>
                     </div>
                 </div>
                 <div class="creation">4 March 2021
