refactor: add folder image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <main class="content">
                 <div class="layout-2-column">
                     <div class="left">
-                        <img src="/myfoto.png" class="myfoto" alt="myfoto">
+                        <img src="images/myfoto.png" class="myfoto" alt="myfoto">
                         <div class="contacts">
                             <h2>PERSONAL DETAILS</h2>
                             <ul class="contacts__link">
@@ -78,7 +78,7 @@
                 <div class="footer__icon">
                     <div>
                         <a href="https://github.com/Dimas-worker">
-                            <img src="/Github.png" class="icon-github" alt="github-icon">
+                            <img src="images/Github.png" class="icon-github" alt="github-icon">
                         </a>
                     </div>
                     <div>
