fix: rename myfoto

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="wrapper">
         <section class="welcome" id="welcome">
           <div class="welcome__content">
-            <img class="my__photo" src="./images/myFoto.png" alt="my-photo" />
+            <img class="my__photo" src="./images/myfoto.png" alt="my-photo" />
             <div class="welcome__text">
               <div class="welcome__title">
                 <h1>Dzmitry<br /><mark class="name">Petralai</mark></h1>
